# Student-feedback-analyser-platform

./: .gitignore  README.md  middleware.ts  package.json
backend/: pyproject.toml
backend/analysis_runs/analysis_0d03c6e362454283/: summary.json
backend/analysis_runs/analysis_1c06e461691b4504/: summary.json
backend/analysis_runs/analysis_4a0df52cb7ed47dc/: summary.json
backend/analysis_runs/analysis_5c3e5ea023984ce2/: summary.json
backend/analysis_runs/analysis_69fd0f0202704384/: summary.json
backend/analysis_runs/analysis_7cb2a377f6714c4d/: summary.json
backend/analysis_runs/analysis_fc4dc032938a4c83/: summary.json
backend/data/: platform.db  platform.db-shm  platform.db-wal
backend/runs/run_20260220T160507208577_0c18ee59/: artifact_manifest.json  factor_structure.yaml  metadata.json
backend/runs/run_20260220T160811786028_0c18ee59/: artifact_manifest.json  metadata.json
backend/runs/run_20260220T170743013198_0c18ee59/: artifact_manifest.json  metadata.json
backend/runs/run_20260220T172135650598_0c18ee59/: artifact_manifest.json  metadata.json
backend/runs/run_20260220T174427052010_0c18ee59/: artifact_manifest.json  metadata.json
backend/runs/run_20260221T070007548456_0c18ee59/: artifact_manifest.json  experiment.yaml  metadata.json
backend/runs/run_20260222T015248099765_0c18ee59/: artifact_manifest.json  metadata.json
backend/runs/run_20260222T043620052963_0c18ee59/: artifact_manifest.json  metadata.json
backend/runs/run_20260222T120958245734_0c18ee59/: artifact_manifest.json  metadata.json
backend/src/: cli.py  config.py  pipeline.py
(+508 files in other folders)
